--- a/src/components/Landing/Hero.astro
+++ b/src/components/Landing/Hero.astro
@@ -236,13 +236,12 @@ import Downarrow from './Downarrow.astro';
         height: 380px;
         padding-bottom: 10px;
         overflow-y: hidden;
-    }
+        }
         /*Fondo*/
         .fondo {
             /*Posicion*/
             top: 25%;
             height: 250px;
-            width: 100%;
         }
         .PersonaUno {
             /*Size*/
@@ -254,10 +253,11 @@ import Downarrow from './Downarrow.astro';
         }
         .PersonaDos {
             /*Size*/
-            height: 200px;
+            height: 150px;
+            width: auto;
             /*Posicion*/
             top: 13%;
-            left: 55%;
+            left: 60%;
             transition: all 0.5s ease;
 
         }
@@ -304,12 +304,12 @@ import Downarrow from './Downarrow.astro';
         }
         .Photo2 {
             /*Size*/
-            height: 160px;
+            height: 10rem;
             /*position*/
             z-index: 91;
             rotate: -10deg;
-            top: 30%;
-            left: 40%;
+            top: 30vh;
+            left: 22vh;
             transition: all 0.5s ease;
         }
         /*Arbusto*/
@@ -339,9 +339,8 @@ import Downarrow from './Downarrow.astro';
             {
                 /*Size*/
                 height: 45px
-            
-       
-}
+            }
+        }
     /*Tablets*/
      @media (min-width: 600px) and (max-width: 1024px) {
         .heroImgs {
