--- a/src/components/Landing/Hero.astro
+++ b/src/components/Landing/Hero.astro
@@ -48,6 +48,8 @@ import Downarrow from './Downarrow.astro';
         overflow-x: hidden;
         z-index: 1;
         margin-top:50px;
+        margin-right: 0px;
+        box-sizing: border-box;
     }
 
     /*Hero*/
