--- a/src/components/Landing/Hero.astro
+++ b/src/components/Landing/Hero.astro
@@ -210,7 +210,7 @@ import Downarrow from './Downarrow.astro';
              /*Posicion*/
              z-index: 1;
             margin: 0 auto; 
-            margin-bottom: 0;ma
+            margin-bottom: 0;
             width: fit-content;
             /*Size*/
             width: 30%;
