--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Analytics from '@vercel/analytics/astro'
 import  SpeedInsights  from "@vercel/speed-insights/astro"
 import NavBar from "../components/Landing/NavBar.astro"
 import Hero from "../components/Landing/Hero.astro"
+import Who from "../components/Landing/Who.astro"
 ---
 
 <html lang="en">
@@ -26,7 +27,7 @@ import Hero from "../components/Landing/Hero.astro"
 		<!-- Hero -->
 		<Hero></Hero>
 		<!-- ¿Quienés somos? -->
-
+		<Who></Who>
 		<!-- 1rst Gen -->
 
 		<!-- Misión y Visión -->
