--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -177,7 +177,67 @@ import Downarrow from './Downarrow.astro';
     /*Celular*/
     @media (max-width: 1080px) {
     }
+    .fondo {
+            top:125%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 250px;
+        }
+        .Counter {
+            left: 20%;
+            transform: translate(0, 60%);
+            height: 100PX ;
+            width: auto;
+        }
+        .Cloud_One {
+            left: 5%;
+            transform: translate(0, -10%);
+            width: auto;
+            height: 100px;
 
+        }
+        .Cloud_Two {
+            height: 200px;
+            left: 18%;
+            transform: translateY(-90%);
+            width: auto;
+            height: 100px;
+
+        }
+        .FWhite {
+            left: -7%;
+            transform: translateY(-40%);
+            width: auto;
+            height: 50px;
+
+        }
+        .PhOne {
+            left: 20%;
+            transform: translateY(-220%);
+            width: auto;
+            height: 80px;
+            rotate: -10deg;
+        }
+        .PhTwo {
+            left: 23%;
+            transform: translateY(-160%);
+            width: auto;
+            height: 80px;
+            rotate: 30deg;
+        }
+        .Pregunta {
+            display: none;
+        }
+        .parrafo {
+            display: none;
+        }
+        .Emoji {
+            display: none;
+        }
+        .button {
+            display: none;
+        }
     /*Tablet*/
     @media (min-width: 600px) and (max-width: 1024px) {
     }
