Frame 2 Smartphones ended

--- a/src/components/Landing/Who.astro
+++ b/src/components/Landing/Who.astro
@@ -258,7 +258,7 @@ import Downarrow from './Downarrow.astro';
         .button {
             top: -500px;
             left: 26%;
-            
+            transform: translateX(-);
         }
         .FrameTwo_Main {
         height: 700px;
