Frame 1 completely responsive

--- a/src/components/Landing/Hero.astro
+++ b/src/components/Landing/Hero.astro
@@ -19,481 +19,469 @@ import Downarrow from './Downarrow.astro';
             <!-- Persona Left -->
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/P_Left.png" alt="PL" class="Persona_Left" loading="eager">
             <!-- Add-ons -->
-               <!-- Colibrí -->
-               <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Animal_1.png" alt="A1" class="Colibri" loading="eager">
-                <!--Flores -->
-                <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Yellow.png" alt="Ye" class="FYellow" loading="eager">
-                <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_White.png" alt="Wh" class="FWhite" loading="eager">
-                <!-- Flore head -->
-                <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Red.png" alt="Ro" class="FRed" loading="eager">
+            <!-- Colibrí -->
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Animal_1.png" alt="A1" class="Colibri" loading="eager">
+            <!--Flores -->
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Yellow.png" alt="Ye" class="FYellow" loading="eager">
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_White.png" alt="Wh" class="FWhite" loading="eager">
+            <!-- Flore head -->
+            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Flower_Red.png" alt="Ro" class="FRed" loading="eager">
             <!--Photos -->
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Hero_1.png" alt="PH1" class="Photo1" loading="eager">
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Photo_Hero_2.png" alt="PH2" class="Photo2" loading="eager">
-
-            </div>
+        </div>
         <div class="HeroBack">
             <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Background.png" alt="Fondo" class="fondo" loading="eager">
         </div>
     </div>
     <div class="heroText">
-            <p>"El genio se hace con un 1% de talento y un 99% de trabajo duro."</p>
-            <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Graph_Albert.png" alt="Albert" class="FirmaAlbert" loading="eager">
-            <Downarrow></Downarrow>
-        </div>
+        <p>"El genio se hace con un 1% de talento y un 99% de trabajo duro."</p>
+        <img src="https://cdn.jsdelivr.net/gh/Aadps123/pelaopro-landing@main/Cloudfare/Graph_Albert.png" alt="Albert" class="FirmaAlbert" loading="eager">
     </div>
+    <Downarrow></Downarrow>
 </div>
 <style>
     * {
-        /*Overall*/
-        overflow-x: hidden;
-        z-index: 1;
-        margin-top:50px;
-        margin-right: 0px;
         box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+
+    body {
+        overflow-x: hidden;
     }
 
     /*Hero*/
+    .hero {
+        position: relative;
+        overflow: hidden;
+        margin-top: 50px;
+    }
+
     .heroImgs {
+        position: relative;
         height: 600px;
         padding-bottom: 10px;
-        overflow-y: hidden;
-        margin-top: 0px;
+        overflow: hidden;
+        margin-top: 0;
     }
+
     .heroMainImgs {
+        position: relative;
         height: 600px;
-        margin-top: 0px;
+        margin-top: 0;
     }
+
     /*Fondo*/
     .fondo {
         z-index: 1;
         width: 100%;
         max-height: 854px;
-        
-        /*posicion*/
         position: absolute;
-        top:40%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
+
     /*Personas*/
-        /*Persona Mid*/
-        .PersonaUno {
-            /*Size*/
-            max-height: 630px;
-            /*Posicion*/
-            position: absolute;
-            z-index: 90;
-            top: 10%;
-            left: 47.5%;      
-            transform: translate(-47.5%, -10%); 
-        }
-        /*Persona  Right*/
-        .PersonaDos {
-            /*Size*/
-            height: 504px ;
-            /*posicion*/
-            position: absolute;
-            z-index: 89;
-            /*Mov*/
-            left: 53%;
-            top: 15%;
-        }
-        /*Persona Left*/
-        .Persona_Left {
-            z-index: 86;
-            /*Size*/
-            height: 400px;
-            width: auto;
-            /*Posicion*/
-            position: absolute;
-            top: 18%;
-            left: 28%;
-        }
+    /*Persona Mid*/
+    .PersonaUno {
+        max-height: 630px;
+        position: absolute;
+        z-index: 90;
+        top: 5%;
+        left: 47.5%;      
+        transform: translate(-47.5%, -10%); 
+    }
+
+    /*Persona Right*/
+    .PersonaDos {
+        height: 504px;
+        position: absolute;
+        z-index: 89;
+        left: 53%;
+        top: 15%;
+    }
+
+    /*Persona Left*/
+    .Persona_Left {
+        z-index: 86;
+        height: 400px;
+        width: auto;
+        position: absolute;
+        top: 18%;
+        left: 28%;
+    }
+
     /*Add-ons*/
-        /*Colibrí*/
-        .Colibri {
-            /*Size*/
-            width: auto;
-            height: 130px;
-            /*Posicion*/
-            z-index: 88;
-            position: absolute;
-            top: 40%;
-            left: 20%;
-            transition: all 0.5s ease;
-        }
-        /*Flores*/
-        .FYellow {
-            z-index: 88;
-            /*Posicion*/
-            position: absolute;
-            top: 56%;
-            left: 33%;
-            /*Size*/
-            width: auto;
-            height: 70px ;
-        }
-        .FWhite {
-            z-index: 88;
-            /*Posicion*/
-            position: absolute;
-            top: 44%;
-            left: 68%;
-            /*Size*/
-            width: auto;
-            height: 70px ;
-        }
-        .FRed {
-            z-index: 91;
-            /*Size*/
-            width: auto;
-            height: 70px;
-            /*Mov*/
-            position: absolute;
-            top: 12%;
-            left: 49%;
-        }	
+    /*Colibrí*/
+    .Colibri {
+        width: auto;
+        height: 130px;
+        z-index: 88;
+        position: absolute;
+        top: 55%;
+        left: 15%;
+        transition: all 0.5s ease;
+    }
+
+    /*Flores*/
+    .FYellow {
+        z-index: 88;
+        position: absolute;
+        top: 80%;
+        left: 33%;
+        width: auto;
+        height: 70px;
+    }
+
+    .FWhite {
+        z-index: 88;
+        position: absolute;
+        top: 56%;
+        left: 68%;
+        width: auto;
+        height: 70px;
+    }
+
+    .FRed {
+        z-index: 91;
+        width: auto;
+        height: 70px;
+        position: absolute;
+        top: 9%;
+        left: 49%;
+    }	
+
     /*Arbustos*/
-        .Bush_Left {
-            /*Size*/
-            width: 1100px;
-            height: auto;
-            /*Posicion*/
-            z-index: 87;
-            position: absolute;
-            top: 40%;
-            left: 15%;
-            display: flex;
-            transition: all 0.5s ease;
-        }
-        .Bush_Right {
-            z-index: 86;
-            /*Size*/
-            width: 503px;
-            /*Posicion*/
-            position: absolute;
-            top: 33%;
-            left: 55%;
-            transition: all 0.5s ease;
-        }
+    .Bush_Left {
+        width: 1100px;
+        height: auto;
+        z-index: 87;
+        position: absolute;
+        top: 50%;
+        left: 10%;
+        display: flex;
+        transition: all 0.5s ease;
+    }
+
+    .Bush_Right {
+        z-index: 86;
+        width: 503px;
+        position: absolute;
+        top: 42%;
+        left: 55%;
+        transition: all 0.5s ease;
+    }
+
     /*Photos*/
-        .Photo1 {
-            z-index: 85;
-            /*Size*/
-            width: auto;
-            height: 250px;
-            /*Posicion*/
-            rotate: -10deg;
-            position: absolute;
-            top: 25%;
-            left: 18%;
-        }
-        .Photo2 {
-            z-index: 85;
-            /*Size*/
-            width: auto;
-            height: 350px;
-            /*Posicion*/
-            rotate: 10deg;
-            position: absolute;
-            left: 62%;
-            top: 15%;
-        }
-        /*Texto*/
-        .heroText {
-            /*Posicion*/
-            text-align: center;
-            /*Size*/
-            width: 100%;
-            margin-top: 0px;
-            font-size: 32px;
-             /*Posicion*/
-             z-index: 1;
-            margin: 0 auto; 
-            margin-bottom: 0;
-            width: fit-content;
-            /*Size*/
-            width: 30%;
-            /*Style*/
-            font-family: Caveat;
+    .Photo1 {
+        z-index: 85;
+        width: auto;
+        height: 250px;
+        rotate: -10deg;
+        position: absolute;
+        top: 25%;
+        left: 18%;
+    }
 
-        }
+    .Photo2 {
+        z-index: 85;
+        width: auto;
+        height: 350px;
+        rotate: 10deg;
+        position: absolute;
+        left: 68%;
+        top: 15%;
+    }
 
-        .FirmaAlbert {
-            /*Size*/
-            margin-top: -10px;
-            padding-top: 0px;
-            margin-bottom: 0px;
-            padding-bottom: 0px;
-            border-top: 0;
-            z-index: 2;
-            width: auto;
-            height: 65px;
-            /*Posicion*/
-            position: relative;
-        }
+    /*Texto*/
+    .heroText {
+        position: relative;
+        z-index: 95;
+        text-align: center;
+        width: 30%;
+        margin: 0 auto;
+        padding: 20px 0;
+        font-size: 32px;
+        font-family: Caveat;
+    }
+
+    .FirmaAlbert {
+        margin-top: 15px;
+        padding-top: 0;
+        margin-bottom: 0;
+        padding-bottom: 0;
+        border-top: 0;
+        z-index: 2;
+        width: auto;
+        height: 65px;
+        position: relative;
+    }
+
     /*celulares*/
     @media (max-width: 1080px) {
         .heroImgs {
-        height: 380px;
-        padding-bottom: 10px;
-        overflow-y: hidden;
+            height: 380px;
+            padding-bottom: 10px;
+            overflow: hidden;
         }
+
         /*Fondo*/
         .fondo {
-            /*Posicion*/
-            top: 28%;
+            top: 50%;
             height: 250px;
         }
+
         .PersonaUno {
-            /*Size*/
             height: 350px;
-            /*Posicion*/
             left: 43%;
             top: 8%;
             transform: translate(-45%, -5%);
         }
+
         .PersonaDos {
-            /*Size*/
             height: 150px;
             width: auto;
-            /*Posicion*/
             top: 17%;
             left: 60%;
             transition: all 0.5s ease;
-
         }
+
         .Persona_Left {
-            /*Size*/
             height: 200px;
-            /*Posicion*/
             position: absolute;
-            top : 20%;
+            top: 20%;
             left: -3%;
             transition: all 0.5s ease;
         }
+
         /*Add-ons*/
         .Colibri {
             display: none;
             transition: all 0.5s ease;
         }
+
         /*Flores*/
         .FYellow {
             display: none;
             transition: all 0.5s ease;
         }
+
         .FWhite {
             display: none;
         }
+
         .FRed {
-            /*Size*/
             width: auto;
             height: 50px;
-            /*Mov*/
             position: absolute;
             top: 10%;
             left: 47%;
         }
+
         /*Photos*/
-        .Photo1	{
-            /*Size*/
+        .Photo1 {
             height: 120px;
-            /*posicion*/
             top: 16%;
             left: 3%;
             transition: all 0.5s ease;
-
         }
+
         .Photo2 {
-            /*Size*/
             height: 10rem;
-            /*position*/
             z-index: 91;
             rotate: -10deg;
-            top: 35vh;
+            top: 230px;
             left: 18.5vh;
             transition: all 0.5s ease;
         }
+
         /*Arbusto*/
         .Bush_Left {
             display: none;
             transition: all 0.5s ease;
         }
+
         .Bush_Right {
             display: none;
             transition: all 0.5s ease;
         }
 
         /*Texto*/
-            .heroText {
-                /*Posicion*/
-                text-align: center;
-                margin: 0 auto; 
-                width: fit-content;
-                /*Size*/
-                margin-top: 5%;
-                font-size: 28px;
-                width: 73%;
-                /*Style*/
-                font-family: Caveat;   
-            }
-            .FirmaAlbert
-            {
-                /*Size*/
-                height: 45px
-            }
+        .heroText {
+            text-align: center;
+            margin: 0 auto; 
+            width: 73%;
+            margin-top: 2%;
+            font-size: 28px;
+            font-family: Caveat;   
         }
+
+        .FirmaAlbert {
+            height: 45px;
+        }
+    }
+
     /*Tablets*/
-     @media (min-width: 600px) and (max-width: 1024px) {
+    @media (min-width: 600px) and (max-width: 1024px) {
         .heroImgs {
             width: 100%;
             height: 520px;
             padding-bottom: 10px;
-            overflow-y: hidden;
-    }
+            overflow: hidden;
+        }
+
         .fondo {
-            /*Posicion*/
-            top: 20%;
+            top: 50%;
             height: 450px;
             width: 100%;
         }
+
         /*Personas*/
         .PersonaUno {
-            /*Size*/
             height: 580px;
-            /*Posicion*/
             left: 43%;
-            top: 3%;
-            transform: translate(-45%, -5%);
+            top: 0%;
+            transform: translate(-45%, -10%);
         }
+
         .PersonaDos {
-            /*Size*/
             height: 400px;
-            /*Posicion*/
             top: 13%;
-            left: 48%;
+            left: 49%;
         }
+
         .Persona_Left {
-            /*Size*/
             height: 300px;
-            /*Posicion*/
             position: absolute;
             top: 18%;
-            left: 15%;
+            left: 21%;
             transform: translate(-8%, -5%);
         }
+
         /*Add-ons*/
         .Colibri {
-            /*Size*/
             display: none;
         }
-         /*Flores*/
-         .FYellow {
+
+        /*Flores*/
+        .FYellow {
             display: none;
         }
+
         .FWhite {
             display: none;
         }
+
         .FRed {
-            top: 7%;
+            top: 3%;
         }
+
         /*Photos*/
         .Photo1 {
-            /*Size*/
             height: 200px;
-            /*posicion*/
             top: 14%;
             left: 14%;
             transition: all 0.5s ease;
         }
+
         .Photo2 {
-            /*Size*/
             height: 200px;
-            /*position*/
             z-index: 85;
             rotate: 10deg;
             top: 15%;
             left: 58%;
             transition: all 0.5s ease;
         }
+
         /*Arbusto*/
         .Bush_Left {
             display: none;
             transition: all 0.5s ease;
-            transition: all 0.5s ease;
-
         }
+
         .Bush_Right {
             display: flex;
-            /*posicion*/
-            top: 20%;
-            left: 40%;
+            top: 29%;
+            left: 44%;
             transition: all 0.5s ease;
-
         }
+
         /*Text*/
         .heroText {
-            /*Stlye*/
             margin-top: 3%;
             font-size: 35px;
             width: 50%;
         }
-        .FirmaAlbert  {
-            /*Size*/
+
+        .FirmaAlbert {
             height: 70px;
         }
-}
-/*Laptops*/
-@media (min-width: 1025px) and (max-width: 1440px) {
-    .heroImgs {
-        height:550px;
-        padding-bottom: 10px;
-        overflow-y: hidden;
-        margin-top: 0px;
     }
-    /*Personas*/
-    .PersonaUno {
-        /*Size*/
-        height: 520px;        
-    }
-    .PersonaDos {
-        /*Size*/
-        height: 400px;
-        /*Posicion*/
-        top: 20%;
-    }
-    .Persona_Left {
-        left: 25%;
-        top: 20%;
-        height: 300px;
-    }
-    /*Arbustos*/
-    .Bush_Left {
-        /*Size*/
-        width: 800px;
-        height: auto;
-        /*Posicion*/
-        top: 40%;
-        left: 13%;
-        display: flex;
-        transition: all 0.5s ease;
-    }
-    .Bush_Right {
-        /*Size*/
-        width: 503px;
-        /*Posicion*/
-        top: 33%;
-        left: 48%;
-    }
-    .Photo2 {
-        /*Size*/
-        width: auto;
-        height: 250px;
-        /*Posicion*/
-        rotate: 10deg;
-        top: 17%;
-        left: 63%;
-    }
-}
 
+    /*Laptops*/
+    @media (min-width: 1025px) and (max-width: 1440px) {
+        .heroImgs {
+            height: 550px;
+            padding-bottom: 10px;
+            overflow: hidden;
+            margin-top: 0;
+        }
+
+        /*Personas*/
+        .PersonaUno {
+            height: 520px;        
+        }
+
+        .PersonaDos {
+            height: 400px;
+            top: 20%;
+        }
+
+        .Persona_Left {
+            left: 25%;
+            top: 20%;
+            height: 300px;
+        }
+        .Colibri {
+            top: 42%;
+            left: 15% ;
+        }
+        .FRed {
+            top: 8%;
+        }
+        .FYellow {
+            top: 55%;
+        }
+        /*Arbustos*/
+        .Bush_Left {
+            width: 800px;
+            height: auto;
+            top: 40%;
+            left:10%;
+            display: flex;
+            transition: all 0.5s ease;
+        }
+
+        .Bush_Right {
+            width: 503px;
+            top: 36%;
+            left: 49%;
+        }
+        .Photo1 {
+            left: 10% ;
+        }
+        .Photo2 {
+            width: auto;
+            height: 250px;
+            rotate: 10deg;
+            top: 19%;
+            left: 65%;
+        }
+        .heroText {
+            transform: translateY(-20%);
+            padding-bottom: 0px;
+        }
+    }
 </style>
